# cursfig

./: .gitignore  README.md  __main__.py  collections.json  cursedconfig.py  cursfig.py  pyproject.toml  setup.py  tests.py
configs/default/: cursfig.yaml
cursfig/: __init__.py  backup.py  cli.py  config.py  gui.py  loader.py  models.py  scanner.py  tui.py
data/: default_collections.yaml  user.yaml
profiles/: dev-workstation.json  gaming.json  msi.json
